Remove Groups and add guest invite into workspaces